<resources>
    <string name="app_name">Handheld Offline PV2 V2</string>
    <string name="action_update">Actualizar Información</string>
    <string name="action_update_message">Actualizando Información</string>

    <string name="action_send">Enviar Registros</string>
    <string name="action_send_message">Enviando Registros</string>

    <string name="action_delete">Eliminar Registros</string>
    <string name="action_delete_message">Eliminando Registros</string>

    <string name="action_sync">Actualizar Información</string>

    <string name="action_completed">Actualización Completa</string>

    <string name="dialog_delete_title">PV2 Access Control</string>
    <string name="dialog_delete_message">Todos los registros serán eliminados!</string>
    <string name="dialog_delete_delete">Eliminar</string>
    <string name="dialog_delete_cancel">Cancelar</string>

    <string name="dialog_update_title">PV2 Access Control</string>
    <string name="dialog_update_message">Descarga Completa</string>
    <string name="dialog_update_ok">OK</string>

    <string name="credential_id">Badge Id:</string>

    <string name="credential_hint">Tap a badge or enter Id</string>
    <string name="button_Check_text">Check</string>

    <!-- PV2 -->
    <string name="door_id">PV2</string>
    <string name="area_id">Jetty</string>
    <string name="logEntry_id">EntryJetty</string>
    <string name="logExit_id">ExitJetty</string>

    <color name="check">#11c147</color>
    <color name="warning">#ff8330</color>
    <color name="error">#FF3838</color>

    <color name="red">#FF3838</color>
    <color name="green">#11c147</color>
    <color name="amber">#ff8330</color>
    <color name="white">#ffffff</color>

    <string name="textView_Personnel_text">Credencial:\r\nNombre:</string>
    <string name="textView_PBIP_text">PBIP</string>
    <string name="textView_HazardousGoods_text">Mercancías Peligrosas</string>
    <string name="textView_PortSecurity_text">Seguridad Portuaria</string>
    <string name="title_activity_personnel">Handheld PV2</string>
    <string name="action_settings">Settings</string>
    <string name="content_description">Portrait</string>
    <string name="textView_PBIP_Color">BLANCO</string>
    <string name="button_Entrance_text">Entrada</string>
    <string name="button_Exit_text">Salida</string>

</resources>
