<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:columnCount="1"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="1"
    tools:context="com.huntloc.handheldpv2.PersonnelFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginTop="20sp"
        android:layout_row="0"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_Personnel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:gravity="left"
            android:text="@string/textView_Personnel_text"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"/>


        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:columnCount="3"
            android:orientation="horizontal"
            android:rowCount="3">

            <TextView
                android:id="@+id/textView_PBIP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:gravity="left"
                android:text="@string/textView_PBIP_text"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView_PBIP_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:gravity="left"
                android:text=""
                android:textSize="23sp" />

            <ImageView
                android:id="@+id/imageView_PBIP"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_column="2"
                android:layout_gravity="center"
                android:layout_row="0"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY" />


            <TextView
                android:id="@+id/textView_HazardousGoods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:gravity="left"
                android:text="@string/textView_HazardousGoods_text"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView_HazardousGoods_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:gravity="left"
                android:text=""
                android:textSize="23sp" />

            <ImageView
                android:id="@+id/imageView_HazardousGoods"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_column="2"
                android:layout_gravity="center"
                android:layout_row="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY" />


            <TextView
                android:id="@+id/textView_PortSecurity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:gravity="left"
                android:text="@string/textView_PortSecurity_text"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView_PortSecurity_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:gravity="left"
                android:text=""
                android:textSize="23sp" />

            <ImageView
                android:id="@+id/imageView_PortSecurity"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_column="2"
                android:layout_gravity="center"
                android:layout_row="2"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY" />
        </GridLayout>

        <ImageView
            android:id="@+id/imageView_Portrait"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight=".5"
            android:adjustViewBounds="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/content_description"
            android:maxHeight="400dp"
            android:maxWidth="400dp"
            android:minHeight="300dp"
            android:minWidth="300dp"
            android:scaleType="fitCenter" />
    </LinearLayout>

</GridLayout>
