<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.huntloc.handheldpv2.PersonnelFragment">

    <TextView
        android:id="@+id/textView_Personnel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/bandPBIPColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView_PBIP_Color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="27sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_clear_margin"
        android:paddingLeft="@dimen/activity_clear_margin"
        android:paddingRight="@dimen/activity_clear_margin"
        android:paddingTop="@dimen/activity_clear_margin">

        <ImageView
            android:id="@+id/imageView_Portrait"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight=".5"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description"
            android:minHeight="300dp"
            android:minWidth="300dp"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_clear_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/button_Entrance"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="top"
                android:layout_margin="0dp"
                android:layout_weight=".45"
                android:text="@string/button_Entrance_text"
                android:textSize="18sp" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight=".1" />

            <Button
                android:id="@+id/button_Exit"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="0dp"
                android:layout_weight=".45"
                android:text="@string/button_Exit_text"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- <TextView
                 android:id="@+id/textView_PBIP"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="left|center_vertical"
                 android:text="@string/textView_PBIP_text"
                 android:textSize="18sp" />-->
            <TextView
                android:id="@+id/textView_PBIP_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:gravity="left|center_vertical"
                android:text=""
                android:textSize="18sp"
                android:layout_weight=".8"/>

            <ImageView
                android:id="@+id/imageView_PBIP"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:layout_gravity="right"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<TextView
                android:id="@+id/textView_HazardousGoods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:gravity="left"
                android:text="@string/textView_HazardousGoods_text"
                android:textSize="23sp" />-->

            <TextView
                android:id="@+id/textView_HazardousGoods_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text=""
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_weight=".8" />

            <ImageView
                android:id="@+id/imageView_HazardousGoods"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description"
                android:layout_gravity="right"
                android:scaleType="fitXY" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<TextView
                android:id="@+id/textView_PortSecurity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:gravity="left"
                android:text="@string/textView_PortSecurity_text"
                android:textSize="23sp" />-->

            <TextView
                android:id="@+id/textView_PortSecurity_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text=""
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_weight=".8" />

            <ImageView
                android:id="@+id/imageView_PortSecurity"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description"
                android:layout_gravity="right"
                android:scaleType="fitXY" />
        </LinearLayout>
        <!--<GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:columnCount="3"
            android:orientation="horizontal"
            android:rowCount="3">


        </GridLayout>-->

    </LinearLayout>

</LinearLayout>
